<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opensmpp</groupId>
	<artifactId>opensmpp-parent</artifactId>
	<version>3.0.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>OpenSMPP</name>
	<description>
		OpenSmpp - Java library implementing the SMPP protocol, and allowing development of External Short Message Entities (ESMEs) and more
	</description>
	<url>http://opensmpp.org/</url>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
	</properties>

	<modules>
		<module>core</module>
		<module>charset</module>
		<module>client</module>
		<module>sim</module>
	</modules>

	<licenses>
		<license>
			<name>BSD</name>
			<comments>
				Copyright (c) 2005, OpenSmpp Project
				all rights reserved.

				Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

				* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
				* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
				* Neither the name of the OpenSmpp Project nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.

				THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

				This software was originally issued under the Logica Open Source License Version 1.0, but was subsequently put in the public domain under the current BSD licence, which was deemed closest to the spirit of the original licence.
			</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>sverkera</id>
			<name>Sverker Abrahamsson</name>
			<email>sverker@abrahamsson.com</email>
		</developer>
		<developer>
			<id>paoloc</id>
			<name>Paolo Campanella</name>
			<email>paoloc@bulksms.com</email>
		</developer>
		<developer>
			<id>abhiksarkar</id>
			<name>Abhik Sarkar</name>
			<email>abhiksarkar@yahoo.com</email>
		</developer>
		<developer>
			<id>smsforum</id>
			<email>smsforum@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>aaray</id>
			<name>Angel Aray</name>
			<email>angel.aray@gmail.com</email>
		</developer>
		<developer>
			<id>ptomli</id>
			<name>Paul Tomlin</name>
			<email>pault@bulksms.com</email>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/zwets/opensmpp</url>
		<connection>scm:git:git://github.com/zwets/opensmpp.git</connection>
		<developerConnection>scm:git:git@github.com:zwets/opensmpp.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>github</system>
		<url>http://github.com/zwets/opensmpp/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.opensmpp</groupId>
				<artifactId>opensmpp-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opensmpp</groupId>
				<artifactId>opensmpp-charset</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opensmpp</groupId>
				<artifactId>opensmpp-client</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opensmpp</groupId>
				<artifactId>opensmpp-sim</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.7</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>3.12.4</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>2.0.9</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito2</artifactId>
				<version>2.0.9</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<mavenExecutorId>forked-path</mavenExecutorId>
					<preparationGoals>clean test</preparationGoals>
					<tagNameFormat>v@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-Djava.awt.headless=true</argLine>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit4</artifactId>
						<version>3.1.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
